--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,14 @@
     "lib": [
       "es2017",
       "dom"
-    ]
+    ],
+    "paths": {
+      "ng-fveh-lib": [
+        "dist/ng-fveh-lib"
+      ],
+      "ng-fveh-lib/*": [
+        "dist/ng-fveh-lib/*"
+      ]
+    }
   }
 }
