--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,20 +9,11 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "target": "es5",
-    "typeRoots": [
-      "node_modules/@types"
-    ],
-    "lib": [
-      "es2017",
-      "dom"
-    ],
+    "typeRoots": ["node_modules/@types"],
+    "lib": ["es2017", "dom"],
     "paths": {
-      "ng-fveh-lib": [
-        "dist/ng-fveh-lib"
-      ],
-      "ng-fveh-lib/*": [
-        "dist/ng-fveh-lib/*"
-      ]
-    }
+      "ng-fveh-lib": ["dist/ng-fveh-lib"],
+      "ng-fveh-lib/*": ["dist/ng-fveh-lib/*"]
+    },
   }
 }
