--- a/package.json
+++ b/package.json
@@ -1,15 +1,24 @@
 {
   "name": "ng-fveh",
+  "author": {
+    "name": "Guilherme Waess",
+    "email": "guilherme.waess@gmail.com"
+  },
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve --aot",
-    "build": "ng build",
+    "build": "ng build --aot",
+    "build-lib": "ng build --project=ng-fveh-lib",
+    "build-lib-prod": "ng build --project=ng-fveh-lib",
     "test": "ng test",
+    "test-lib": "ng test --project=ng-fveh-lib",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "publish-lib": "npm run build-lib-prod && npm run npm-pack",
+    "npm-pack": "cd dist/ng-fveh-lib && npm pack && npm publish"  
   },
-  "private": true,
+  "private": false,
   "dependencies": {
     "@angular/animations": "^6.0.3",
     "@angular/cdk": "^6.2.0",
