--- a/projects/ng-fveh-lib/package.json
+++ b/projects/ng-fveh-lib/package.json
@@ -1,5 +1,9 @@
 {
-  "name": "ng-fveh-lib",
+  "name": "ng-fveh",
+  "author": {
+    "name": "Guilherme Waess",
+    "email": "guilherme.waess@gmail.com"
+  },
   "version": "0.0.1",
   "peerDependencies": {
     "@angular/common": "^6.0.0-rc.0 || ^6.0.0",
