--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "publish-lib": "npm run build-lib-prod && npm run npm-pack",
-    "npm-pack": "cd dist/ng-fveh-lib && npm pack && npm publish"  
+    "npm-pack": "cd dist/ng-fveh-lib && npm pack && npm publish"
   },
   "private": false,
   "dependencies": {
@@ -45,6 +45,7 @@
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
+    "@types/sinon": "^5.0.1",
     "codelyzer": "~4.2.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
@@ -55,6 +56,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "ng-packagr": "^3.0.0-rc.2",
     "protractor": "~5.3.0",
+    "sinon": "^6.1.3",
     "ts-node": "~5.0.1",
     "tsickle": ">=0.25.5",
     "tslib": "^1.7.1",
