wip: tests done but still getting error because of typescript

--- a/projects/ng-fveh-lib/package.json
+++ b/projects/ng-fveh-lib/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ng-fveh",
+  "name": "ng-fveh-lib",
   "author": {
     "name": "Guilherme Waess",
     "email": "guilherme.waess@gmail.com"
