updates packages dealing with test compilation sinon.d.ts error

--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -3,7 +3,10 @@
   "compilerOptions": {
     "outDir": "../out-tsc/app",
     "module": "es2015",
-    "types": []
+    "types": [],
+  },
+  "angularCompilerOptions":{
+    "disableTypeScriptVersionCheck": true
   },
   "exclude": [
     "src/test.ts",
