--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "ng-fveh": {
+    "ng-fveh-app": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/ng-fveh",
+            "outputPath": "dist/ng-fveh-app",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -53,18 +53,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "ng-fveh:build"
+            "browserTarget": "ng-fveh-app:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "ng-fveh:build:production"
+              "browserTarget": "ng-fveh-app:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "ng-fveh:build"
+            "browserTarget": "ng-fveh-app:build"
           }
         },
         "test": {
@@ -109,11 +109,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "ng-fveh:serve"
+            "devServerTarget": "ng-fveh-app:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "ng-fveh:serve:production"
+              "devServerTarget": "ng-fveh-app:serve:production"
             }
           }
         },
@@ -128,7 +128,7 @@
         }
       }
     },
-    "ng-fveh-lib": {
+    "ng-fveh": {
       "root": "projects/ng-fveh-lib",
       "sourceRoot": "projects/ng-fveh-lib/src",
       "projectType": "library",
@@ -169,7 +169,7 @@
       }
     }
   },
-  "defaultProject": "ng-fveh",
+  "defaultProject": "ng-fveh-app",
   "schematics": {
     "@schematics/angular:component": {
       "styleext": "scss"
