circle-ci config try1

--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "ng": "ng",
     "start": "ng serve --aot",
     "build-app": "ng build --project=ng-fveh-app --aot",
-    "build-app-prod": "ng build --project=ng-fveh-app --prod",
+    "build-app-prod": "ng build --project=ng-fveh-app --prod --base-href=https://guilhermewaess.github.io/ng-fveh/",
     "build-lib": "ng build --project=ng-fveh",
     "build-lib-prod": "ng build --project=ng-fveh --prod",
     "test": "ng test",
     "test-lib": "ng test --project=ng-fveh-lib",
     "lint": "ng lint",
     "e2e": "ng e2e",
+    "publish-app": "git subtree push --prefix dist/ng-fveh-app origin gh-pages",
     "publish-lib": "npm run build-lib-prod && npm run npm-pack",
     "npm-pack": "cd dist/ng-fveh-lib && npm pack && npm publish"
   },
