--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "build-app-prod": "ng build --project=ng-fveh-app --prod --base-href=https://guilhermewaess.github.io/ng-fveh/",
     "build-lib": "ng build --project=ng-fveh",
     "build-lib-prod": "ng build --project=ng-fveh --prod",
-    "test": "ng test",
-    "test-lib": "ng test --project=ng-fveh-lib",
+    "test-app": "ng test --project=ng-fveh-app",
+    "test-lib": "ng test --project=ng-fveh --watch=false",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "publish-app": "git subtree push --prefix dist/ng-fveh-app origin gh-pages",
