--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,5 +37,10 @@ jobs:
       - run: npm run build-lib
 
       # run tests!
-      - run: npm run test-lib
+      test:
+        - run: npm run test-lib
+        - run:
+          name: Uploading code coverage to codecov.io
+          when: always
+          command: bash <(curl -s https://codecov.io/bash)
 
