--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,10 +37,7 @@ jobs:
       - run: npm run build-lib
 
       # run tests!
-      - test:
+      - tests:
         run: npm run test-lib
-        run:
-          name: Uploading code coverage to codecov.io
-          when: always
-          command: bash <(curl -s https://codecov.io/bash)
+        run: bash <(curl -s https://codecov.io/bash)
 
