--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,6 +38,6 @@ jobs:
 
       # run tests!
       - tests:
-        run: npm run test-lib
-        run: bash <(curl -s https://codecov.io/bash)
+        - run: npm run test-lib
+        - run: bash <(curl -s https://codecov.io/bash)
 
